# mmai-marketing-rx-sales-forecasting

./: 01_eda_v4.ipynb  02_parametric_modeling.html  02_parametric_modeling.ipynb  03_ml_models.html  03_ml_models.ipynb  README.md  main.py  pyproject.toml
data/: MMM_Drug_Data.xlsx  ml_benchmark.csv  ml_predictions.csv  parametric_benchmark.csv  parametric_elasticities.csv  parametric_predictions.csv  processed_data.csv  processed_eda.csv
docs/: EDA_Findings_Memo_MMIX.docx  research_draft.md
notebooks/: 01_eda_v3.ipynb
notebooks/v1/: 01_eda.ipynb  01_eda_clean.ipynb
notebooks/v2/: 01_eda_clean.ipynb  02_parametric_models.ipynb
